# kfritz

./: .gitignore  .packit.yaml  CMakeLists.txt  Messages.sh  README.md  _service  kfritz.spec  setup_test.sh
.github/: FUNDING.yml
.github/workflows/: deb.yml  obs-submit.yml
debian/: changelog  control  kfritz.install  rules  watch
package/: CMakeLists.txt  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: HelpTipButton.qml  configNetwork.qml  configPhoneBook.qml  main.qml
package/metadata/: de.agundur.kfritz.appdata.xml
package/metadata/notifyrc/: kfritz.notifyrc
package/plugin/: CMakeLists.txt  FritzCallMonitor.cpp  FritzCallMonitor.h  FritzPhonebookFetcher.cpp  FritzPhonebookFetcher.h  FritzSOAP.cpp  FritzSOAP.h  KFritzCorePlugin.cpp  KFritzCorePlugin.h  PhonebookCache.cpp  PhonebookCache.h  RecentCallsModel.cpp  RecentCallsModel.h
packaging/: kfritz.spec
translate/: kfritz.pot
translate/de/: plasma_applet_de.agundur.kcast.po  plasma_applet_de.agundur.kfritz.po
translate/es/: plasma_applet_de.agundur.kcast.po  plasma_applet_de.agundur.kfritz.po
translate/fr/: plasma_applet_de.agundur.kcast.po  plasma_applet_de.agundur.kfritz.po
translate/nl/: plasma_applet_de.agundur.kfritz.po
translate/ru/: plasma_applet_de.agundur.kcast.po  plasma_applet_de.agundur.kfritz.po
